static/css/style.css
/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */

body {
    max-width: 100vw;
    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnXDDV1PuRocfjYWyVRmwga0dJweI-egkCieuYK4Th5QLXtynQ&s');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
}

.index-image {
    height: 70vh;
    text-align: center;
}

.main-container {
    min-height: 100vh;
    max-width: 100vw;
    overflow: hidden;
}

.row,
.row > * {
    padding: 0 !important;
}

/*----Add book page----*/

.add-book-title {
    margin: 0 0 5px 0;
    font-size: 1em;
}

.add-book-title-margin {
    margin-left: 5px;
}

.add-book-title-button {
    margin-top: 5px;
}


/*----/Add book page----*/


/*----Headers and fonts----*/

h1 {
    margin-top: 15px;
    font-family: 'Indie Flower', cursive, sans-serif;
}

h2,
h3,
h4,
h5,
h6,
p {
    font-family: 'Roboto', sans-serif;
}

h6 {
    margin-top: 30px;
    font-family: 'Roboto', sans-serif;
}

.main-title {
    text-align: center;
}

.modal-text {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    margin-top: 13px;
    text-align: left;
    color: rgb(99, 99, 99);
}


/*----/Headers and fonts----*/

.lost-logo {
    height: 50px;
    width: 50px;
}

.card-img-top {
    width: 100%;
    height: 320px; /* You can adjust this value to fit your design */
    object-fit: cover; /* This will cover the card area without distorting the aspect ratio */
}

.card-img-top-books {
    width: 100%;
    object-fit: contain;
}

.buy-now-link {
    color: #f60;
    width: 100px;
    height: 40px;
    font-weight: bold;
}

.buy-now-link-div {
    background-color: aliceblue;
    border-color: #f60;
    border-style: solid;
    border-width: 3px;
    font-weight: bold;
}

.modal-share {
    height: 120px;
}


/*-- Buttons--*/

.btn-danger {
    background-color: #ed6a5a;
    border: 1px solid #ed6a5a;
}

.btn-primary {
    background-color: #5ca4a9;
    border: 1px solid #5ca4a9;
}

.btn-success {
    background-color: #94b659;
    border: 1px solid #94b659;
}

.search-return-button {
    margin-top: 15px;
}

.share-button {
    padding-left: 24px;
}


/* -- Footer -- */

.footer-row {
    border-top: 1px aliceblue solid;
    margin-top: 20px;
}

.footer-text {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    margin-top: 13px;
    color: rgb(90, 90, 95);
}


/* Social icons */

.social-icon {
    margin: 0;
    height: 30px;
    padding-top: 15px;
    color: rgb(90, 90, 95);
    -webkit-transition: all 1s ease-out;
    -o-transition: all 1s ease-out;
    transition: all 1s ease-out;
}

.social-icon:hover {
    color: orangered;
    -webkit-transition: all .5s ease-in;
    -o-transition: all .5s ease-in;
    transition: all .5s ease-in;
}

.social-icons-footer {
    text-align: center;
}

.icon-bigscreen-alignment {
    text-align: center;
}

.icon-bigscreen-alignment-logo {
    text-align: center;
}


/* /Social icons */


/* # Blinking text for Index */

.blink {
    margin-top: 10px;
    -webkit-animation: blink 1s linear infinite;
    -moz-animation: blink 1s linear infinite;
    -ms-animation: blink 1s linear infinite;
    -o-animation: blink 1s linear infinite;
    animation: blink 1s linear infinite;
}

@-webkit-keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    50.01% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@-moz-keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    50.01% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@-ms-keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    50.01% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@-o-keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    50.01% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 1;
    }
    50.01% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}


/* endblink */


/* Media screen */

@media screen and (min-width: 576px) {
    .icon-bigscreen-alignment {
        text-align: right;
        padding-right: 15px;
    }
    .icon-bigscreen-alignment-logo {
        text-align: left;
    }
}

